--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Codelet | Beat Technical Interviews</title>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logos/mini-logo-blue.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#1D589A" /> 
     <meta
       name="description"
-      content="Beat Technical Interviews"
+      content="Codelet is a mobile app that quickly prepares software developers for technical interviews."
+    />
+    <meta property="og:title" content="Codelet | Beat Technical Interviews" />
+    <meta
+      property="og:description"
+      content="Codelet is a mobile app that quickly prepares software developers for technical interviews."
+    />
+    <meta
+      property="og:image"
+      content="%PUBLIC_URL%/logos/mini-logo-blue.png"
+    />
+    <meta
+      property="og:url"
+      content="www.codelet.app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logos/mini-logo-blue.png" />
     <!--
@@ -24,7 +38,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Codelet</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
